✨Feat: new page css

--- a/itch.io/Profile.html
+++ b/itch.io/Profile.html
@@ -1,24 +1,42 @@
-<p class="custom-grouped-lb text-center center" style="font-size: 2em;">
-    <a href="https://www.youtube.com/@CatCavernQuest" class="custom-lb" style="background: #ff6973; color: #eee;">
-        <img class="custom-lb-img" height="32" src="https://cdn.simpleicons.org/youtube/eee" loading="lazy">
-        YouTube
+<p class="custom-grouped-lb text-center" style="font-size: 2em;">
+    <a href="https://www.youtube.com/@CatCavernQuest" class="custom-lb custom-tip" style="background: #ff6973;">
+        <img height="32" src="https://cdn.simpleicons.org/youtube/222" loading="lazy">
+
+        <span class="custom-tip-content">
+            YouTube
+        </span>
     </a>
-    <a href="https://x.com/CatCavernQuest" class="custom-lb" style="background: #46425e; color: #eee;">
-        <img class="custom-lb-img" height="32" src="https://cdn.simpleicons.org/x/eee" loading="lazy">
-        Old Twitter
+
+    <a href="https://x.com/CatCavernQuest" class="custom-lb custom-tip" style="background: #46425e;">
+        <img height="32" src="https://cdn.simpleicons.org/mastodon/eee" loading="lazy">
+
+        <span class="custom-tip-content">
+            Old Twitter
+        </span>
     </a>
-    <a href="https://github.com/Forge-claw" class="custom-lb" style="background: #15788c; color: #eee;">
-        <img class="custom-lb-img" height="32" src="https://cdn.simpleicons.org/github/eee" loading="lazy">
-        Github
+
+    <a href="https://github.com/Forge-claw" class="custom-lb custom-tip" style="background: #15788c;">
+        <img height="32" src="https://cdn.simpleicons.org/bluesky/eee" loading="lazy">
+
+        <span class="custom-tip-content">
+            Github
+        </span>
     </a>
 </p>
+
 <p style="font-size: 3em;" class="custom-drop-cap text-justify">
     Welcome, fellow traveler!
 </p>
 <p style="font-size: 2em;" class="custom-drop-cap text-justify">
-    This is a Forge of ideas where <strong>projects</strong>, <strong>concepts</strong>, and <strong>prototypes</strong> rest like <strong>hidden treasures</strong>.
-    Each doorway reveals a new adventure&mdash;crafted to inspire <strong>developers</strong>, <strong>artists</strong>, and <strong>explorers</strong> of the game world.&nbsp;
+    <strong>This is the Forge —</strong>
+    where raw ideas and wild prototypes are hammered
+    into powerful creations, like blades born in fire.
+</p>
+<p>
+    Every piece tells a story.
+    Every story awaits to inspire
+    developers • artists • game-world explorers.
 </p>
 <p style="font-size: 1.8em;">
-    Return often, for new discoveries await in these depths.
+    Return often, for new discoveries await in the flames of the forge.
 </p>
