✅Update: html sctructure and  style

--- a/itch.io/Profile.html
+++ b/itch.io/Profile.html
@@ -1,22 +1,30 @@
 <p class="custom-grouped-lb text-center" style="font-size: 2em;">
-    <a href="https://www.youtube.com/@CatCavernQuest" class="custom-lb custom-tip" style="background: #ff6973;">
-        <img height="32" src="https://cdn.simpleicons.org/youtube/222" loading="lazy">
+    <a href="https://www.youtube.com/@CatCavernQuest" class="custom-lb custom-tip" style="background: #FF0000;">
+        <img height="20" src="https://cdn.simpleicons.org/youtube/eee" loading="lazy">
 
         <span class="custom-tip-content">
             YouTube
         </span>
     </a>
 
-    <a href="https://x.com/CatCavernQuest" class="custom-lb custom-tip" style="background: #46425e;">
-        <img height="32" src="https://cdn.simpleicons.org/mastodon/eee" loading="lazy">
+    <a href="https://x.com/CatCavernQuest" class="custom-lb custom-tip" style="background: #16181C;">
+        <img height="20" src="https://cdn.simpleicons.org/x/eee" loading="lazy">
 
         <span class="custom-tip-content">
             Old Twitter
         </span>
     </a>
 
-    <a href="https://github.com/Forge-claw" class="custom-lb custom-tip" style="background: #15788c;">
-        <img height="32" src="https://cdn.simpleicons.org/bluesky/eee" loading="lazy">
+    <a href="#" class="custom-lb custom-tip" style="background: #E1306C;">
+        <img height="20" src="https://cdn.simpleicons.org/instagram/eee" loading="lazy">
+
+        <span class="custom-tip-content">
+            Instagram
+        </span>
+    </a>
+
+    <a href="https://github.com/Forge-claw" class="custom-lb custom-tip" style="background: #2EA44F;">
+        <img height="20" src="https://cdn.simpleicons.org/github/eee" loading="lazy">
 
         <span class="custom-tip-content">
             Github
@@ -28,13 +36,13 @@
     Welcome, fellow traveler!
 </p>
 <p style="font-size: 2em;" class="custom-drop-cap text-justify">
-    <strong>This is the Forge —</strong>
+    <strong>This is the Forge —</strong><br>
     where raw ideas and wild prototypes are hammered
     into powerful creations, like blades born in fire.
 </p>
-<p>
+<p style="font-size: 2em;" class="custom-drop-cap text-justify">
     Every piece tells a story.
-    Every story awaits to inspire
+    Every story awaits to inspire<br>
     developers • artists • game-world explorers.
 </p>
 <p style="font-size: 1.8em;">
