✅Up: Html page data

--- a/itch.io/Profile.html
+++ b/itch.io/Profile.html
@@ -45,6 +45,6 @@
     Every story awaits to inspire<br>
     developers • artists • game-world explorers.
 </p>
-<p style="font-size: 1.8em;">
+<p style="font-size: 1.8em;" class="custom-drop-cap text-justify">
     Return often, for new discoveries await in the flames of the forge.
 </p>
